# doc/api.yaml
@@ -761,6 +761,51 @@ paths:
         "500":
           description: Internal Server Error
 
+  /upload:
+    post:
+      summary: Upload file Image
+      description: "Upload file image to the system"
+
+      tags: ["Upload"]
+
+      operationId: upload
+
+      requestBody:
+        description: "File to be uploaded"
+        content:
+          multipart/form-data:
+            schema:
+              description: "File image"
+              type: object
+              properties:
+                image:
+                  description: "File Image"
+                  type: string
+                  format: binary
+
+      responses:
+        "200":
+          description: File Image uploaded succesfully
+          content:
+            application/json:
+              schema:
+                description: "URI of the Uploaded Image"
+                type: object
+                properties:
+                  image:
+                    description: Image URI
+                    type: string
+                    format: file
+                    pattern: '^(.+)\/([^\/]+)$'
+                    example: "assets/images/img1.jpg"
+                    minLength: 1
+                    maxLength: 1000
+
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+
 tags:
   - name: Authentication
     description: Endpoints related to Authentication
@@ -782,6 +827,9 @@ tags:
 
   - name: Users
     description: Endpoints related to Users
+
+  - name: Upload
+    description: Endpoints related to File Uploads
 
 components:
   schemas:
